# mat-classification

./: CHANGELOG.md  LICENSE  MAT-analysis-Tutorial.ipynb  MAT-classification-Tutorial.ipynb  Movelets Similarity.ipynb  README.md  pyproject.toml  setup.py
matanalysis/: README.md
matanalysis/methods/: __init__.py
matanalysis/methods/_deprecated/tec/: tec.py
matanalysis/methods/_deprecated/txgboost/: XGBoost.py
matanalysis/methods/_lib/: datahandler.py  metrics.py  models.py
matanalysis/methods/_lib/models/: MoveletMLP.py
matanalysis/methods/deepest/: DeepeST.py  DeepestST.py
matanalysis/methods/marc/: marc_nn.py
matanalysis/methods/movelet/: moveletml.py  x_moveletml.py
matanalysis/methods/pois/: model_poifreq.py  poifreq.py
matanalysis/methods/tec/: tec.py
matanalysis/methods/trf/: randomforrest.py
matanalysis/methods/tuler/: BITULER.py  TULVAE.py
matanalysis/methods/txgboost/: XGBoost.py
matclassification/: README.md
matclassification/methods/: __init__.py  core.py
matclassification/methods/_lib/: datahandler.py  logger.py  metrics.py
matclassification/methods/core/: AbstractClassifier.py  HPOClassifier.py  HSClassifier.py  MClassifier.py  MHPOClassifier.py  MHSClassifier.py  SimilarityClassifier.py  THSClassifier.py  __init__.py
matclassification/methods/ensemble/: TEC.py
matclassification/methods/feature/: MoveletDT.py  MoveletMLP.py  MoveletRF.py  MoveletRFHP.py  MoveletSVC.py  POIS.py
matclassification/methods/mat/: BITULER.py  DeepeST.py  MARC.py  TRF.py  TULVAE.py  TXGB.py
matclassification/methods/similarity/: TDT.py  TKNN.py  TSVC.py
sample/data/FoursquareNYC/: FoursquareNYC_v1.json  test.parquet  train.parquet
sample/results/hiper/: test.csv  train.csv
sample/results/pois/: npoi_poi_1-x_test.csv  npoi_poi_1-y_train.csv  npoi_poi_1_2_3-x_test.csv  npoi_poi_1_2_3-x_train.csv  npoi_poi_1_specific-x_test.csv  npoi_poi_1_specific-x_train.csv  npoi_poi_1_specific-y_test.csv  npoi_poi_2-x_test.csv  npoi_poi_2-x_train.csv  npoi_poi_2_specific-x_train.csv  npoi_poi_3-x_test.csv  npoi_poi_3-y_test.csv  npoi_poi_3_specific-x_test.csv  npoi_poi_3_specific-x_train.csv  npoi_poi_3_specific-y_train.csv  poi_1_specific-sequences.csv  poi_2_specific-sequences.csv  poi_3_specific-sequences.csv
scripts/cls/: MAT-MC.py
scripts/helpers/: MAT-MergeDatasets.py
(+52 files in other folders)
